--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
+    "weak-key": "^1.0.1",
     "webpack": "^4.39.2",
     "webpack-cli": "^3.3.7"
   }
